--- a/server/package.json
+++ b/server/package.json
@@ -6,8 +6,7 @@
   "type": "module",
   "scripts": {
     "start": "node src/server.js",
-    "dev": "nodemon src/server.js",
-    "seed": "node src/utils/seed.js"
+    "dev": "nodemon src/server.js"
   },
   "keywords": ["multaqa", "university", "students"],
   "author": "",
